--- a/templatedjango/apptemplate/templates/base/template.html
+++ b/templatedjango/apptemplate/templates/base/template.html
@@ -64,9 +64,9 @@
         </a>
 
         <a 
-          href="ver_compras" onclick="verificar()"class="list-group-item list-group-item-action bg-light">
+          href="listado_produccion" onclick="verificar()"class="list-group-item list-group-item-action bg-light">
           <i class="fa fa-bars mr-2"> {% load static %} <img src="{% static '/assets/icons/icon_cart.svg' %}">
-          </i><small class="text-uppercase font-weight-bold" style="color: #A3A6B4;">Pedidos</small>
+          </i><small class="text-uppercase font-weight-bold" style="color: #A3A6B4;">Listado Produccion</small>
         </a>
 
         <a 
@@ -146,6 +146,11 @@
         
         {% endblock produccion%}
 
+        <!-- LISTADO PRODUCCION -->
+
+        {% block listado_produccion %}
+        
+        {% endblock listado_produccion %}
 
 
       </div>
