--- a/templatedjango/apptemplate/templates/insumos/insumos.html
+++ b/templatedjango/apptemplate/templates/insumos/insumos.html
@@ -76,7 +76,7 @@
 
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-8 card shadow p-3 mb-5 bg-white rounded" style="border:none;">
 
-            <table id="example" class="table  table-hover table-bordered  display nowrap" cellspacing="0" width="100%">
+            <table id="example" class="tablita table  table-hover table-bordered  display nowrap" cellspacing="0" width="100%">
                 <thead>
                     <tr>
                         <th style="color: #A3A6B4;">Categoría</th>
