--- a/templatedjango/apptemplate/templates/produccion/produccion.html
+++ b/templatedjango/apptemplate/templates/produccion/produccion.html
@@ -138,7 +138,8 @@
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-8 card shadow p-3 mb-5 bg-white rounded item insumos" style="border:none; display: none;">
 
             <div class="table-responsive">
-                <table id="example" class="tablita table  table-hover table-bordered  display nowrap" cellspacing="0" width="100%">
+                <table id="example" class="tablita table  table-hover table-bordered  display nowrap" cellspacing="0"
+                    width="100%">
                     <thead>
                         <tr>
                             <th style="color: #A3A6B4;">Insumo</th>
